--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ jobs:
     - go: master
 
 before_script:
+  - make env deps-fetch
   - |
     if [[ $TRAVIS_GO_VERSION == 1.15* ]]; then
       curl -sL $CODECLIMATE > /home/travis/gopath/bin/cc-test-reporter
