--- a/.golangci.yml
+++ b/.golangci.yml
@@ -26,19 +26,22 @@ linters:
     - noctx         # https://github.com/sonatard/noctx
 
 #    - asciicheck         # https://github.com/tdakkota/asciicheck
+#    - cyclop             # https://github.com/bkielbasa/cyclop
 #    - depguard           # https://github.com/OpenPeeDeeP/depguard
 #    - dogsled            # https://github.com/alexkohler/dogsled
 #    - dupl               # https://github.com/mibk/dupl
+#    - durationcheck      # https://github.com/charithe/durationcheck
 #    - errorlint          # https://github.com/polyfloyd/go-errorlint
 #    - exhaustivestruct   # https://github.com/mbilski/exhaustivestruct
 #    - forbidigo          # https://github.com/ashanbrown/forbidigo
+#    - forcetypeassert    # https://github.com/gostaticanalysis/forcetypeassert
 #    - funlen             # https://github.com/ultraware/funlen
 #    - gci                # https://github.com/daixiang0/gci
 #    - gochecknoglobals   # https://github.com/leighmcculloch/gochecknoglobals
 #    - gochecknoinits     # https://github.com/leighmcculloch/gochecknoinits
 #    - gocognit           # https://github.com/uudashr/gocognit
 #    - goconst            # https://github.com/jgautheron/goconst
-#    - gocyclo            # https://github.com/alecthomas/gocyclo
+#    - gocyclo            # https://github.com/fzipp/gocyclo
 #    - godot              # https://github.com/tetafro/godot
 #    - godox              # https://github.com/matoous/godox
 #    - goerr113           # https://github.com/Djarvur/go-err113
@@ -52,18 +55,21 @@ linters:
 #    - goprintffuncname   # https://github.com/jirfag/go-printf-func-name
 #    - gosec              # https://github.com/securego/gosec
 #    - ifshort            # https://github.com/esimonov/ifshort
-#    - interfacer         # https://github.com/mvdan/interfacer
+#    - importas           # https://github.com/julz/importas
+#    - interfacer         # https://github.com/mvdan/interfacer (deprecated)
 #    - lll                # https://github.com/walle/lll
-#    - maligned           # https://github.com/mdempsky/maligned
 #    - makezero           # https://github.com/ashanbrown/makezero
+#    - maligned           # https://github.com/mdempsky/maligned (deprecated)
 #    - misspell           # https://github.com/client9/misspell
 #    - nakedret           # https://github.com/alexkohler/nakedret
 #    - nestif             # https://github.com/nakabonne/nestif
+#    - nilerr             # https://github.com/gostaticanalysis/nilerr
 #    - nlreturn           # https://github.com/ssgreg/nlreturn
 #    - nolintlint         # https://github.com/golangci/golangci-lint/blob/master/pkg/golinters/nolintlint/README.md
 #    - paralleltest       # https://github.com/kunwardeep/paralleltest
 #    - prealloc           # https://github.com/alexkohler/prealloc
 #    - predeclared        # https://github.com/nishanths/predeclared
+#    - revive             # https://github.com/mgechev/revive
 #    - rowserrcheck       # https://github.com/jingyugao/rowserrcheck
 #    - scopelint          # https://github.com/kyoh86/scopelint
 #    - sqlclosecheck      # https://github.com/ryanrolds/sqlclosecheck
@@ -73,6 +79,7 @@ linters:
 #    - tparallel          # https://github.com/moricho/tparallel
 #    - unconvert          # https://github.com/mdempsky/unconvert
 #    - unparam            # https://github.com/mvdan/unparam
+#    - wastedassign       # https://github.com/sanposhiho/wastedassign
 #    - whitespace         # https://github.com/ultraware/whitespace
 #    - wrapcheck          # https://github.com/tomarrell/wrapcheck
 #    - wsl                # https://github.com/bombsimon/wsl
