fix #55: rename coverage to report

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       - run: make install
       - run: '[ $(ls bin/linux/*/* | wc -l) = 1 ]'
 
-  coverage:
+  report:
     needs: [ test ]
     runs-on: ubuntu-18.04
 
