--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,14 +8,14 @@ archives:
     format: tar.gz
     name_template: "{{.Binary}}_{{.Version}}_{{.Os}}-{{.Arch}}"
     replacements:
-      386: 32bit
-      amd64: 64bit
+      amd64: 64bit_x86
+      arm64: 64bit_arm
       darwin: macOS
       linux: Linux
 
 brews:
   - name: maintainer
-    caveats:
+    caveats: ''
     commit_author:
       name: Kamil Samigullin
       email: kamil@samigullin.info
@@ -49,8 +49,8 @@ builds:
     flags:
       - -trimpath
     goarch:
-      - 386
       - amd64
+      - arm64
     goos:
       - darwin
       - linux
