--- a/.gitattributes
+++ b/.gitattributes
@@ -1,15 +1,15 @@
 .gitattributes  export-ignore
 .gitignore      export-ignore
+.gitkeep        export-ignore
 .golangci.yml   export-ignore
 .goreleaser.yml export-ignore
-.travis.yml     export-ignore
 
 /.github/       export-ignore
 /bin/           export-ignore
-/githooks/      export-ignore
 /tools/         export-ignore
 
 Makefile        export-ignore
+Taskfile        export-ignore
 *.md            export-ignore
 
 *_test.go       export-ignore
