--- a/.golangci.yml
+++ b/.golangci.yml
@@ -26,11 +26,16 @@ linters:
     - noctx         # https://github.com/sonatard/noctx
 
 #    - asciicheck         # https://github.com/tdakkota/asciicheck
+#    - bidichk            # https://github.com/breml/bidichk
+#    - containedctx       # https://github.com/sivchari/containedctx
+#    - contextcheck       # https://github.com/sylvia7788/contextcheck
 #    - cyclop             # https://github.com/bkielbasa/cyclop
+#    - decorder           # https://gitlab.com/bosi/decorder
 #    - depguard           # https://github.com/OpenPeeDeeP/depguard
 #    - dogsled            # https://github.com/alexkohler/dogsled
 #    - dupl               # https://github.com/mibk/dupl
 #    - durationcheck      # https://github.com/charithe/durationcheck
+#    - errchkjson         # https://github.com/breml/errchkjson
 #    - errname            # https://github.com/Antonboom/errname
 #    - errorlint          # https://github.com/polyfloyd/go-errorlint
 #    - exhaustivestruct   # https://github.com/mbilski/exhaustivestruct
@@ -38,6 +43,7 @@ linters:
 #    - forcetypeassert    # https://github.com/gostaticanalysis/forcetypeassert
 #    - funlen             # https://github.com/ultraware/funlen
 #    - gci                # https://github.com/daixiang0/gci
+#    - grouper            # https://github.com/leonklingele/grouper
 #    - gochecknoglobals   # https://github.com/leighmcculloch/gochecknoglobals
 #    - gochecknoinits     # https://github.com/leighmcculloch/gochecknoinits
 #    - gocognit           # https://github.com/uudashr/gocognit
@@ -59,13 +65,16 @@ linters:
 #    - ifshort            # https://github.com/esimonov/ifshort
 #    - importas           # https://github.com/julz/importas
 #    - interfacer         # https://github.com/mvdan/interfacer (deprecated)
+#    - ireturn            # https://github.com/butuzov/ireturn
 #    - lll                # https://github.com/walle/lll
+#    - maintidx           # https://github.com/yagipy/maintidx
 #    - makezero           # https://github.com/ashanbrown/makezero
 #    - maligned           # https://github.com/mdempsky/maligned (deprecated)
 #    - misspell           # https://github.com/client9/misspell
 #    - nakedret           # https://github.com/alexkohler/nakedret
 #    - nestif             # https://github.com/nakabonne/nestif
 #    - nilerr             # https://github.com/gostaticanalysis/nilerr
+#    - nilnil             # https://github.com/Antonboom/nilnil
 #    - nlreturn           # https://github.com/ssgreg/nlreturn
 #    - nolintlint         # https://github.com/golangci/golangci-lint/blob/master/pkg/golinters/nolintlint/README.md
 #    - paralleltest       # https://github.com/kunwardeep/paralleltest
@@ -78,11 +87,13 @@ linters:
 #    - sqlclosecheck      # https://github.com/ryanrolds/sqlclosecheck
 #    - stylecheck         # https://github.com/dominikh/go-tools/tree/master/stylecheck
 #    - tagliatelle        # https://github.com/ldez/tagliatelle
+#    - tenv               # https://github.com/sivchari/tenv
 #    - testpackage        # https://github.com/maratori/testpackage
 #    - thelper            # https://github.com/kulti/thelper
 #    - tparallel          # https://github.com/moricho/tparallel
 #    - unconvert          # https://github.com/mdempsky/unconvert
 #    - unparam            # https://github.com/mvdan/unparam
+#    - varnamelen         # https://github.com/blizzy78/varnamelen
 #    - wastedassign       # https://github.com/sanposhiho/wastedassign
 #    - whitespace         # https://github.com/ultraware/whitespace
 #    - wrapcheck          # https://github.com/tomarrell/wrapcheck
