--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: publish
+name: delivery
 
 on:
   push:
@@ -15,23 +15,24 @@ jobs:
       - uses: actions/checkout@v2
         with: { fetch-depth: 0 }
       - uses: actions/setup-go@v2
-        with: { go-version: '1.17' }
+        with: { fetch-depth: 0, go-version: '1.17' }
 
       - uses: actions/cache@v2
         with:
+          fetch-depth: 0
           path: |
             ~/go/pkg/mod
             ~/.cache/go-build
             ~/Library/Caches/go-build
             %LocalAppData%\go-build
           key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+          restore-keys: ${{ runner.os }}-go-
 
       - run: make env deps-fetch test
 
       - uses: goreleaser/goreleaser-action@v2
         with:
+          fetch-depth: 0
           distribution: goreleaser
           version: latest
           args: release --rm-dist
