--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
-name: build
+name: integration
 
-on: [ push ]
+on:
+  pull_request: { branches: [ '*' ] }
+  push: { branches: [ '*' ] }
 
 jobs:
   test:
@@ -14,42 +16,45 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with: { fetch-depth: 0 }
       - uses: actions/setup-go@v2
-        with: { go-version: '${{ matrix.go }}' }
+        with: { fetch-depth: 0, go-version: '${{ matrix.go }}' }
 
       - uses: actions/cache@v2
         with:
+          fetch-depth: 0
           path: |
             ~/go/pkg/mod
             ~/.cache/go-build
             ~/Library/Caches/go-build
             %LocalAppData%\go-build
           key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+          restore-keys: ${{ runner.os }}-go-
 
-      - run: make env deps-fetch test-with-coverage
+      - run: make env deps-fetch install test-with-coverage
+      - run: '[ $(ls bin/linux/*/* | wc -l) = 1 ]'
 
   build:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
+        with: { fetch-depth: 0 }
       - uses: actions/setup-go@v2
-        with: { go-version: '1.17' }
+        with: { fetch-depth: 0, go-version: '1.17' }
 
       - uses: actions/cache@v2
         with:
+          fetch-depth: 0
           path: |
             ~/go/pkg/mod
             ~/.cache/go-build
             ~/Library/Caches/go-build
             %LocalAppData%\go-build
           key: ${{ runner.os }}-go-${{ hashFiles('tools/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+          restore-keys: ${{ runner.os }}-go-
 
       - run: make tools
-      - run: '[ $(grep go:gen tools/tools.go | wc -l) = $(ls bin/linux/*/* | wc -l) ]'
+      - run: '[ $(ls bin/linux/*/* | wc -l) = $(grep go:gen tools/tools.go | wc -l) ]'
 
       - run: make pre-push
 
@@ -58,6 +63,7 @@ jobs:
     needs: [ test, build ]
     steps:
       - uses: rtCamp/action-slack-notify@v2
+        with: { fetch-depth: 0 }
         env:
           SLACK_ICON: https://github.com/github.png?size=64
           SLACK_TITLE: ${{ github.repository }}
