--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,21 +2,22 @@ name: publishing
 
 on:
   push:
-    tags: [ '*' ]
+    tags: [ 'v*' ]
 
 permissions:
   contents: write
 
 jobs:
-  publish:
-    runs-on: ubuntu-18.04
+  release:
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with: { fetch-depth: 0 }
       - uses: actions/setup-go@v3
-        with: { go-version: '1.18' }
-      - uses: actions/cache@v2
+        with: { go-version: '1.19' }
+
+      - uses: actions/cache@v3
         with:
           path: |
             ~/go/pkg/mod
@@ -26,7 +27,7 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
           restore-keys: ${{ runner.os }}-go-
       - run: make env deps-fetch test
-      - uses: goreleaser/goreleaser-action@v2
+      - uses: goreleaser/goreleaser-action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.GORELEASER_TOKEN }}
         with:
@@ -35,9 +36,9 @@ jobs:
           args: release --rm-dist
 
   notify:
-    needs: [ publish ]
-    if: ${{ failure() || success() }}
-    runs-on: ubuntu-18.04
+    needs: [ release ]
+    if: failure() || success()
+    runs-on: ubuntu-latest
 
     steps:
       - uses: rtCamp/action-slack-notify@v2
