--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,32 +5,57 @@ on:
     branches: [ '*' ]
     paths:
       - '.github/workflows/ci.yml'
+      - '.golangci.yml'
       - '**.go'
+      - 'go.{mod,sum}'
       - '!tools/*.go'
   push:
     branches: [ '*' ]
     paths:
       - '.github/workflows/ci.yml'
+      - '.golangci.yml'
       - '**.go'
+      - 'go.{mod,sum}'
       - '!tools/*.go'
     tags: [ '!*' ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+        with: { fetch-depth: 0 }
+      - uses: actions/setup-go@v3
+        with: { go-version: '1.19' }
+
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+            ~/Library/Caches/go-build
+            %LocalAppData%\go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('tools/go.sum') }}
+          restore-keys: ${{ runner.os }}-go-
+      - run: make tools generate lint git-check
+
   test:
     strategy:
       matrix:
         go:
           - 1.x
           - 1.18.x
+          - 1.19.x
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with: { fetch-depth: 0 }
       - uses: actions/setup-go@v3
         with: { go-version: '${{ matrix.go }}' }
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         with:
           path: |
             ~/go/pkg/mod
@@ -41,37 +66,28 @@ jobs:
           restore-keys: ${{ runner.os }}-go-
       - run: make env deps-fetch test-with-coverage
       - uses: actions/upload-artifact@v3
-        if: ${{ matrix.go == '1.18.x' }}
-        with:
-          name: code-coverage-report
-          path: c.out
+        if: matrix.go == '1.19.x'
+        with: { name: code-coverage-report, path: c.out }
+
       - run: make install
       - run: '[ $(ls bin/linux/*/* | wc -l) = 1 ]'
 
   report:
     needs: [ test ]
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with: { fetch-depth: 0 }
       - uses: actions/download-artifact@v3
-        with:
-          name: code-coverage-report
-      - run: |
-          echo "MODULE=$(grep module go.mod | awk '{print $2}')" >> $GITHUB_ENV
-      - uses: paambaati/codeclimate-action@v2.7.5
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        with:
-          coverageLocations: c.out:gocov
-          debug: true
-          prefix: ${{ env.MODULE }}
+        with: { name: code-coverage-report }
+      - uses: codecov/codecov-action@v3
+        with: { files: c.out }
 
   notify:
-    needs: [ test ]
-    if: ${{ failure() || success() }}
-    runs-on: ubuntu-18.04
+    needs: [ lint, test ]
+    if: github.event_name == 'push' && (failure() || success())
+    runs-on: ubuntu-latest
 
     steps:
       - uses: rtCamp/action-slack-notify@v2
