--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -15,14 +15,14 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with: { fetch-depth: 0 }
       - uses: actions/setup-go@v3
-        with: { go-version: '1.18' }
-      - uses: actions/cache@v2
+        with: { go-version: '1.19' }
+      - uses: actions/cache@v3
         with:
           path: |
             ~/go/pkg/mod
@@ -38,8 +38,8 @@ jobs:
 
   notify:
     needs: [ build ]
-    if: ${{ failure() || success() }}
-    runs-on: ubuntu-18.04
+    if: github.event_name == 'push' && (failure() || success())
+    runs-on: ubuntu-latest
 
     steps:
       - uses: rtCamp/action-slack-notify@v2
