--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
         with: { fetch-depth: 0 }
       - uses: actions/setup-go@v3
-        with: { go-version: '1.19' }
+        with: { go-version: '1.19', cache: true }
 
       - uses: actions/cache@v3
         with:
