--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
       - '.golangci.yml'
       - '**.go'
       - 'go.{mod,sum}'
-      - '!tools/*.go'
+      - '!tools/*'
   push:
     branches: [ '*' ]
     paths:
@@ -16,7 +16,7 @@ on:
       - '.golangci.yml'
       - '**.go'
       - 'go.{mod,sum}'
-      - '!tools/*.go'
+      - '!tools/*'
     tags: [ '!*' ]
 
 jobs:
