--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
-name: checking
+name: Continuous integration
 
 on:
+  workflow_dispatch:
+
   pull_request:
     branches: [ '*' ]
     paths:
@@ -9,6 +11,7 @@ on:
       - '**.go'
       - 'go.{mod,sum}'
       - '!tools/*'
+
   push:
     branches: [ '*' ]
     paths:
@@ -21,79 +24,81 @@ on:
 
 jobs:
   lint:
+    name: Linting
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout the repository
+        uses: actions/checkout@v3
         with: { fetch-depth: 0 }
-      - uses: actions/setup-go@v4
-        with: { go-version: '1.19' }
+      - name: Set up Go environment
+        uses: actions/setup-go@v4
+        with: { go-version: 1.20.x, cache-dependency-path: tools/go.sum }
 
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-            ~/Library/Caches/go-build
-            %LocalAppData%\go-build
-          key: ${{ runner.os }}-go-${{ hashFiles('tools/go.sum') }}
-          restore-keys: ${{ runner.os }}-go-
-      - run: make tools generate lint git-check
+      - name: Prepare and run linter
+        run: make tools lint
+      - name: Check git state
+        run: make generate git-check
 
   test:
+    name: Testing
+    runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         go:
           - 1.x
           - 1.18.x
           - 1.19.x
-
-    runs-on: ubuntu-latest
+          - 1.20.x
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout the repository
+        uses: actions/checkout@v3
         with: { fetch-depth: 0 }
-      - uses: actions/setup-go@v4
+      - name: Set up Go environment
+        uses: actions/setup-go@v4
         with: { go-version: '${{ matrix.go }}' }
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-            ~/Library/Caches/go-build
-            %LocalAppData%\go-build
-          key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
-          restore-keys: ${{ runner.os }}-go-
-      - run: make env deps-fetch test-with-coverage
-      - uses: actions/upload-artifact@v3
-        if: matrix.go == '1.19.x'
+
+      - name: Prepare and run tests
+        run: make env deps-fetch test-with-coverage
+      - name: Store code coverage report
+        uses: actions/upload-artifact@v3
+        if: matrix.go == '1.20.x'
         with: { name: code-coverage-report, path: c.out }
 
       - run: make install
       - run: '[ $(ls bin/linux/*/* | wc -l) = 1 ]'
 
   report:
+    name: Reporting
     needs: [ test ]
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout the repository
+        uses: actions/checkout@v3
         with: { fetch-depth: 0 }
-      - uses: actions/download-artifact@v3
+
+      - name: Fetch code coverage report
+        uses: actions/download-artifact@v3
         with: { name: code-coverage-report }
-      - uses: codecov/codecov-action@v3
+      - name: Send code coverage report to Codecov (codecov.io)
+        uses: codecov/codecov-action@v3
         with: { files: c.out }
 
   notify:
+    name: Notifying
     needs: [ lint, test ]
-    if: github.event_name == 'push' && (failure() || success())
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request' && (failure() || success())
 
     steps:
-      - uses: rtCamp/action-slack-notify@v2
+      - name: Send Slack notification
+        uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_COLOR: ${{ contains(needs.*.result, 'failure') && 'failure' || 'success' }}
           SLACK_ICON: https://github.com/github.png?size=64
-          SLACK_TITLE: '${{ github.repository }}: ${{ github.workflow }}'
+          SLACK_TITLE: '⚙️ ${{ github.repository }}: ${{ github.workflow }}'
           SLACK_USERNAME: GitHub Actions
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
