--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -1,11 +1,14 @@
-name: tooling
+name: Tools validation
 
 on:
+  workflow_dispatch:
+
   pull_request:
     branches: [ '*' ]
     paths:
       - '.github/workflows/tools.yml'
       - 'tools/*'
+
   push:
     branches: [ '*' ]
     paths:
@@ -14,38 +17,36 @@ on:
     tags: [ '!*' ]
 
 jobs:
-  build:
+  check:
+    name: Checking
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout the repository
+        uses: actions/checkout@v3
         with: { fetch-depth: 0 }
-      - uses: actions/setup-go@v4
-        with: { go-version: '1.19', cache: true }
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-            ~/Library/Caches/go-build
-            %LocalAppData%\go-build
-          key: ${{ runner.os }}-go-${{ hashFiles('tools/go.sum') }}
-          restore-keys: ${{ runner.os }}-go-
-      - run: make tools
-      - run: '[ $(ls bin/linux/*/* | wc -l) = $(grep go:gen tools/tools.go | wc -l) ]'
+      - name: Set up Go environment
+        uses: actions/setup-go@v4
+        with: { go-version: 1.20.x, cache-dependency-path: tools/go.sum }
 
-      - run: make pre-push
+      - name: Install and check tools
+        run: make tools && [ $(ls bin/linux/*/* | wc -l) = $(grep go:gen tools/tools.go | wc -l) ]
+
+      - name: Check git state
+        run: make generate git-check
 
   notify:
-    needs: [ build ]
-    if: github.event_name == 'push' && (failure() || success())
+    name: Notifying
+    needs: [ check ]
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request' && (failure() || success())
 
     steps:
-      - uses: rtCamp/action-slack-notify@v2
+      - name: Send Slack notification
+        uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_COLOR: ${{ contains(needs.*.result, 'failure') && 'failure' || 'success' }}
           SLACK_ICON: https://github.com/github.png?size=64
-          SLACK_TITLE: '${{ github.repository }}: ${{ github.workflow }}'
+          SLACK_TITLE: '🛠️ ${{ github.repository }}: ${{ github.workflow }}'
           SLACK_USERNAME: GitHub Actions
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
