fix #174: add daily integration tests

--- a/.github/workflows/runs.yml
+++ b/.github/workflows/runs.yml
@@ -9,6 +9,7 @@ on:
         options:
           - Cache invalidation
           - Continuous integration
+          - Continuous integration healthcheck
           - Dependabot at weekends
           - Documentation delivery
           - Tools validation
