--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4.1.1
         with: { fetch-depth: 0 }
       - uses: actions/setup-go@v5.0.0
-        with: { go-version: '1.21', cache: true }
+        with: { go-version: 1.22.x, cache: true }
 
       - run: make env deps-fetch test
       - uses: goreleaser/goreleaser-action@v5.0.0
