--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,8 +48,8 @@ jobs:
       matrix:
         go:
           - 1.x
-          - 1.20.x
           - 1.21.x
+          - 1.22.x
 
     steps:
       - name: Checkout the repository
@@ -63,7 +63,7 @@ jobs:
         run: make env deps-fetch test-with-coverage
       - name: Store code coverage report
         uses: actions/upload-artifact@v4.3.1
-        if: matrix.go == '1.21.x'
+        if: matrix.go == 1.21.x
         with: { name: code-coverage-report, path: c.out }
 
       - run: make install
