--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,7 @@ updates:
     commit-message:
       prefix: 'feat'
       include: 'scope'
+    open-pull-requests-limit: 10
 
   - package-ecosystem: npm
     directory: /docs/
@@ -31,6 +32,7 @@ updates:
     commit-message:
       prefix: 'docs'
       include: 'scope'
+    open-pull-requests-limit: 10
 
   - package-ecosystem: gomod
     directory: /tools/
@@ -45,6 +47,7 @@ updates:
     commit-message:
       prefix: 'tools'
       include: 'scope'
+    open-pull-requests-limit: 10
 
   - package-ecosystem: github-actions
     directory: /
@@ -59,3 +62,4 @@ updates:
     commit-message:
       prefix: 'ci/cd'
       include: 'scope'
+    open-pull-requests-limit: 10
