--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,20 +19,20 @@ updates:
       include: 'scope'
     open-pull-requests-limit: 10
 
-  - package-ecosystem: npm
-    directory: /docs/
-    schedule:
-      interval: daily
-      time: '06:00'
-      timezone: UTC
-    labels:
-      - 'type: improvement'
-      - 'scope: docs'
-      - 'scope: deps'
-    commit-message:
-      prefix: 'docs'
-      include: 'scope'
-    open-pull-requests-limit: 10
+#  - package-ecosystem: npm
+#    directory: /docs/
+#    schedule:
+#      interval: daily
+#      time: '06:00'
+#      timezone: UTC
+#    labels:
+#      - 'type: improvement'
+#      - 'scope: docs'
+#      - 'scope: deps'
+#    commit-message:
+#      prefix: 'docs'
+#      include: 'scope'
+#    open-pull-requests-limit: 10
 
   - package-ecosystem: gomod
     directory: /tools/
